# ab1-tool

./: Makefile  pyproject.toml
sample-data/: E07_Comp_3_AB.ab1  E07_Comp_5_AB.ab1  E08_Comp_3_AB.ab1  E08_Comp_5_AB.ab1  E09_Comp_3_AB.ab1  E09_Comp_5_AB.ab1
src/pyab1/: process.py  process_many.py
